<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txt_titulo"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/edt_edad"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:text="@string/hnt_edad" />
    <EditText
        android:id="@+id/edt_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hnt_nombre"
        />
    <EditText
        android:id="@+id/edt_peso_actual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hnt_peso_actual"
        />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_calcular"

        />

    <Button
        android:id="@+id/btn_instrucciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/btn_instrucciones" />


</android.support.constraint.ConstraintLayout>